--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,11 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* @import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css"; */
 .slick-slide img {
     margin: auto;
 }
 
 @import "react-toastify/dist/ReactToastify.css";
+@import url(./modal.module.css);
+@import url(./carousel.module.css);
+@import url(./dropdown.module.css);
